--- a/src/AppBundle/Resources/config/routing/frontend.yml
+++ b/src/AppBundle/Resources/config/routing/frontend.yml
@@ -1,5 +1,9 @@
-app_index:
-    path:     /
-    defaults:
-        _controller: FrameworkBundle:Template:template
-        template:    AwFrontendTemplateBundle::index.html.twig
+#app_index:
+#    path:     /
+#    defaults:
+#        _controller: FrameworkBundle:Template:template
+#        template:    AwFrontendTemplateBundle::index.html.twig
+
+frontend:
+    resource: "@AppBundle/Resources/config/routing/frontend/index.yml"
+    prefix: /
