--- a/src/AppBundle/Resources/config/doctrine/Paymentmethod.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Paymentmethod.orm.yml
@@ -21,7 +21,7 @@ AppBundle\Entity\Paymentmethod:
       nullable: true
     enable:
       type: boolean
-      nullable: false
+      nullable: true
   oneToMany:
     payment:
       targetEntity: Payment
